--- a/style.css
+++ b/style.css
@@ -193,9 +193,10 @@ h2 {
 }
 
 .card:hover {
-    /* transform: translate(-3px, -1px); */
+    transform: translate(-3px, -1px);
     box-shadow: 1px 1px 5px #747474;
     background-color: #464545;
+
 
 }
 
